--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/angular-sample-pranay",
+            "outputPath": "docs",
             "baseHref": "/angular-sample-pranay/",
             "index": "src/index.html",
             "browser": "src/main.ts",
